codex-exp: iteration 6